--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="text/css" rel="stylesheet" href="styles.css" />
+    <title>Clayton Brand</title>    
+  </head>
   <body>
-    Test
+    <div class="content">
+      <h1>Clayton Brand</h1>
+      <p>I'm a software engineer / engineering leader based in NYC.</p>
+      <p>Experience in startups, medtech, and fintech.</p>
+      <p>Open to opportunities, full-time or contract: c@claytonbrand.com</p>
+      <br/>
+      <a target="_blank" href="https://www.linkedin.com/in/claytonbrand/">linkedin</a>
+      <a target="_blank" href="https://github.com/clay-to-n">github</a>
+      <a target="_blank" href="https://www.twitter.com/clay_to_n">twitter</a>
+    </div>
   </body>
 </html>
